# smtg

./: .gitignore  LICENSE  README.md  app.py  bot.py  config.sample.py  inbox.py  parser.py  pyproject.toml  requirements.txt
smtg/: __main__.py  app.py  config.py  handler.py  parsers.py  telegram.py
