[tool.poetry]
name = "smtg"
version = "0.2.0"
description = "Mail relay to Telegram with built-in anti-spam checks"
authors = ["Nikita Sychev"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiosmtpd = "^1.4.6"
py3dns = "^4.0.2"
dkimpy = {extras = ["asyncio"], version = "^1.1.8"}
pyspf = "^2.0.14"
aiogram = "^3.10.0"
typed-settings = "^24.4.0"
pydnsbl = "^1.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
